fix: Watermarkのデフォルト値が拒否されていたのでOptionにして記載しないように変更
