# orchestrator/backend/src/dto/experiment.rs
@@ -4,6 +4,7 @@ use serde_json::Value;
 use utoipa::ToSchema;
 
 use crate::config::default::*;
+use crate::dto::watermark::WatermarkConfig;
 use crate::entities::experiment::{ActiveModel, ExperimentStatus, MiaMethod};
 
 /// 実験の作成リクエスト
@@ -38,8 +39,7 @@ pub struct CreateExperimentRequest {
   #[schema(value_type = Object)]
   pub hyperparameters: Value,
   /// 透かし設定
-  #[schema(value_type = Object)]
-  pub watermark: Value,
+  pub watermark: Option<WatermarkConfig>,
 
   // -- データ流用 --
   /// 既存実験結果を流用する実験結果
@@ -70,7 +70,7 @@ impl Default for CreateExperimentRequest {
       shadow_test_size: SHADOW_TEST_SIZE,
       seed: SEED,
       hyperparameters: serde_json::json!({}),
-      watermark: serde_json::json!({}),
+      watermark: None,
       // データ流用
       base_experiment_id: None,
       load_target_model: LOAD_TARGET_MODEL,
@@ -98,7 +98,7 @@ impl From<CreateExperimentRequest> for ActiveModel {
       shadow_test_size: Set(req.shadow_test_size),
       seed: Set(req.seed),
       hyperparameters: Set(req.hyperparameters),
-      watermark: Set(req.watermark),
+      watermark: Set(serde_json::to_value(req.watermark.unwrap_or_default()).unwrap_or_default()),
 
       // データ流用
       base_experiment_id: Set(req.base_experiment_id),
